--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Ta frio em Curitba?</title>
+  <title>Tá frio em Curitiba?</title>
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="app">
     <div class="app-question">
-      <h1>Ta frio em curitiba?</h1>
+      <h1>Tá frio em Curitiba?</h1>
     </div>
     <div class="app-answer">
       <p></p>
