--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <meta http-equiv='Content-Security-Policy' content="default-src 'self' *; script-src 'self' 'unsafe-inline' *; connect-src 'self' 'unsafe-inline' *; style-src 'self';">
+  <meta http-equiv="Content-Security-Policy" content="default-src http:">
   <title>Tá frio em Curitiba?</title>
   <link rel="icon" href="./favicon.png" />
   <link rel="stylesheet" href="style.css">
